feat: cache Classroom recent activity app repository impl